make little changes
